pushing to validate README.md code behaviour

--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "main": "./lib/testpack",
   "version": "0.0.0",
   "description": "A short description of your package",
-  "keywords": [
-  ],
+  "keywords": [],
   "activationCommands": {
-    "atom-workspace": "testpack:toggle"
+    "atom-workspace": "testpack:transform"
   },
   "repository": "https://github.com/atom/testpack",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
