--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "allcontributors",
   "main": "./lib/allcontributors",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "Atom package for easy implementation of all-contributors spec within the atom editor",
-  "keywords": [],
+  "keywords": [
+    "package",
+    "contribution",
+    "conbtributors",
+    "all-contributors"
+  ],
   "activationCommands": {
     "atom-workspace": "allcontributors:transform"
   },
