updating package.json and readme.md for atom.io registry

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "keywords": [
     "package",
     "contribution",
-    "conbtributors",
+    "contributors",
     "all-contributors"
   ],
   "activationCommands": {
